# Prodikeys64

./: README.md
prodikeys64/: CMakeLists.txt  prodikeys-core.cpp  prodikeys-core.h  prodikeys64.cpp  prodikeys64.manifest  prodikeys64.rc  resource.h  stdafx.cpp  stdafx.h
prodikeys64/include/: teVirtualMIDI.h
prodikeys64/lib/: libusb-1.0.lib  teVirtualMIDI32.lib  teVirtualMIDI64.lib
